start to code in js

--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@
     height: 500px;
     border: 2px solid darkgrey;
     background-color: rgb(87, 155, 107);
+    box-shadow: 10px 10px 5px darkslategrey;
 }
 
-#display {
+.display {
     width: 335px;
     height: 100px;
     align-self: start;
@@ -21,25 +22,25 @@
     border-radius: 5px;
     margin-top: 5px;
     background-color: rgb(127, 255, 212);
+    font-size: 32px;
+    text-align: end;
 }
 
 .buttonbox {
-    /* border: 1px solid; */
     display: flex;
     flex-wrap: wrap;
-        /* justify-content: space-evenly; */
-    /* align-content: space-evenly; */
-    /* padding-top: 5px; */
-    /* margin: 10px; */
 }
 
 .button {
     width: 65px;
     height: 65px;
-    border: 1px solid darkgrey;
     border-radius: 5px;
     margin: 5px;
     flex: auto;
     background-color: rgb(212, 212, 157);
     font-size: 32px;
+}
+
+.button:hover {
+    background-color: cadetblue;
 }
