--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 }
 
 .display {
+    display: flex;
+    flex-wrap: wrap;
     width: 335px;
     height: 100px;
     align-self: start;
@@ -23,8 +25,13 @@
     margin-top: 5px;
     background-color: rgb(127, 255, 212);
     font-size: 32px;
-    text-align: end;
+    justify-content: end;
     overflow: scroll;
+}
+
+.result {
+    width: 100%;
+    text-align: right;
 }
 
 .buttonbox {
@@ -56,4 +63,8 @@
 
 .delete {
     background-color: brown;
+}
+
+.backspace {
+    background-color: darkgoldenrod;
 }
